Prevent margin collapse

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 header {
   display: flex;
   justify-content: flex-end;
-  padding: 20px 0;
 }
 
 header > button {
