--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,7 +3,7 @@ main {
 }
 
 main > .container {
-  width: 90%;
+  padding: 2rem;
   max-width: 700px;
   margin: 0 auto;
 }
