--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ a:hover {
 }
 
 pre {
-  margin: 0 10px;
+  margin: 0 1rem 2rem;
   border-radius: 5px;
   background-color: hsl(0, 11%, 93%);
   font-size: 1rem;
